@@ -1,3 +1,10 @@
+2007-06-08  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclCmdMZ.c (Tcl_StringObjCmd): Changed [string first] and
+	* doc/string.n: [string last] so that they have clearer descriptions
+	for those people who know the adage about needles and haystacks. This
+	follows suggestions on comp.lang.tcl...
+
 2007-06-06  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclParse.c: fix for uninit read [Bug 1732414].
